Add description for four kings

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -342,7 +342,7 @@
       {
         id: "nito",
         title: "Defeat the Four Kings",
-        description: "achievement_description",
+        description: "Defeat Four Kings, inheritors of souls",
         difficulty: "Medium",
         category: "Progress"
       },
