Fix ID for 4 kings

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -340,7 +340,7 @@
         category: "Progress"
       },
       {
-        id: "nito",
+        id: "four-kings",
         title: "Defeat the Four Kings",
         description: "Defeat Four Kings, inheritors of souls",
         difficulty: "Medium",
