--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -347,21 +347,21 @@
         category: "Progress"
       },
       {
-        id: "achievement_identifier",
+        id: "nito",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "covenant-gravelord-servant",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "link-the-fire",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
