--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -348,20 +348,20 @@
       },
       {
         id: "nito",
-        title: "achievement_title",
+        title: "Defeat Gravelord Nito",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "covenant-gravelord-servant",
-        title: "achievement_title",
+        id: "bed-of-chaos",
+        title: "Discover Gravelord Servant",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "link-the-fire",
+        id: "covenant-princess-guard",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
