--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -355,15 +355,15 @@
       },
       {
         id: "bed-of-chaos",
-        title: "Discover Gravelord Servant",
+        title: "Defeat Bed of Chaos",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "covenant-princess-guard",
-        title: "achievement_title",
-        description: "achievement_description",
+        title: "Covenant: Princess's Guard",
+        description: "Discover Princess's Guard covenant",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
