--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -349,14 +349,14 @@
       {
         id: "nito",
         title: "Defeat Gravelord Nito",
-        description: "achievement_description",
+        description: "Defeat the Soul Lord Gravelord Nito",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "bed-of-chaos",
         title: "Defeat Bed of Chaos",
-        description: "achievement_description",
+        description: "Defeat the Soul Lord Bed of Chaos",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
