--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -350,21 +350,21 @@
         id: "nito",
         title: "Defeat Gravelord Nito",
         description: "Defeat the Soul Lord Gravelord Nito",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
         id: "bed-of-chaos",
         title: "Defeat Bed of Chaos",
         description: "Defeat the Soul Lord Bed of Chaos",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
         id: "covenant-princess-guard",
         title: "Covenant: Princess's Guard",
         description: "Discover Princess's Guard covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
