--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -351,7 +351,7 @@
         title: "Defeat Gravelord Nito",
         description: "Defeat the Soul Lord Gravelord Nito",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Progression"
       },
       {
         id: "bed-of-chaos",
@@ -365,7 +365,7 @@
         title: "Covenant: Princess's Guard",
         description: "Discover Princess's Guard covenant",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "achievement_identifier",
