--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -368,21 +368,21 @@
         category: "Covenant"
       },
       {
-        id: "achievement_identifier",
+        id: "covenant-forest-hunter",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "priscilla",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "gwyndolin",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
