--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -369,21 +369,21 @@
       },
       {
         id: "covenant-forest-hunter",
-        title: "achievement_title",
+        title: "Covenant: Forest Hunter",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "priscilla",
-        title: "achievement_title",
+        title: "Defeat Crossbreed Priscilla",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "gwyndolin",
-        title: "achievement_title",
+        title: "Defeat the Dark Sun Gwyndolin",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
