--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -370,21 +370,21 @@
       {
         id: "covenant-forest-hunter",
         title: "Covenant: Forest Hunter",
-        description: "achievement_description",
+        description: "Discover Forest Hunter covenant",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "priscilla",
         title: "Defeat Crossbreed Priscilla",
-        description: "achievement_description",
+        description: "Defeat Crossbreed Priscilla, the Lifehunter",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "gwyndolin",
         title: "Defeat the Dark Sun Gwyndolin",
-        description: "achievement_description",
+        description: "Defeat Dark Sun Gwyndolin, the Darkmoon God",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
