--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -371,21 +371,21 @@
         id: "covenant-forest-hunter",
         title: "Covenant: Forest Hunter",
         description: "Discover Forest Hunter covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
         id: "priscilla",
         title: "Defeat Crossbreed Priscilla",
         description: "Defeat Crossbreed Priscilla, the Lifehunter",
-        difficulty: "achievement_difficulty",
+        difficulty: "Hard",
         category: "achievement_category"
       },
       {
         id: "gwyndolin",
         title: "Defeat the Dark Sun Gwyndolin",
         description: "Defeat Dark Sun Gwyndolin, the Darkmoon God",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
