--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -351,14 +351,14 @@
         title: "Defeat Gravelord Nito",
         description: "Defeat the Soul Lord Gravelord Nito",
         difficulty: "Medium",
-        category: "Progression"
+        category: "Progress"
       },
       {
         id: "bed-of-chaos",
         title: "Defeat Bed of Chaos",
         description: "Defeat the Soul Lord Bed of Chaos",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Progress"
       },
       {
         id: "covenant-princess-guard",
@@ -372,21 +372,21 @@
         title: "Covenant: Forest Hunter",
         description: "Discover Forest Hunter covenant",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "priscilla",
         title: "Defeat Crossbreed Priscilla",
         description: "Defeat Crossbreed Priscilla, the Lifehunter",
         difficulty: "Hard",
-        category: "achievement_category"
+        category: "Hidden"
       },
       {
         id: "gwyndolin",
         title: "Defeat the Dark Sun Gwyndolin",
         description: "Defeat Dark Sun Gwyndolin, the Darkmoon God",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Hidden"
       },
       {
         id: "achievement_identifier",
