--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -389,21 +389,21 @@
         category: "Hidden"
       },
       {
-        id: "achievement_identifier",
+        id: "covenant-gravelord-servant",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "link-the-fire",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
-        id: "achievement_identifier",
+        id: "strongest-weapon",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
