--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -390,22 +390,22 @@
       },
       {
         id: "covenant-gravelord-servant",
-        title: "achievement_title",
-        description: "achievement_description",
+        title: "",
+        description: "Discover Gravelord Servant covenant",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "link-the-fire",
         title: "achievement_title",
-        description: "achievement_description",
+        description: "Reach \"To Link the Fire\" ending",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "strongest-weapon",
         title: "achievement_title",
-        description: "achievement_description",
+        description: "Acquire best weapon through standard reinforcement",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
