--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -390,21 +390,21 @@
       },
       {
         id: "covenant-gravelord-servant",
-        title: "",
+        title: "Covenant: Gravelord Servant",
         description: "Discover Gravelord Servant covenant",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "link-the-fire",
-        title: "achievement_title",
+        title: "To Link the Fire",
         description: "Reach \"To Link the Fire\" ending",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
       },
       {
         id: "strongest-weapon",
-        title: "achievement_title",
+        title: "Strongest Weapon",
         description: "Acquire best weapon through standard reinforcement",
         difficulty: "achievement_difficulty",
         category: "achievement_category"
