--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -392,21 +392,21 @@
         id: "covenant-gravelord-servant",
         title: "Covenant: Gravelord Servant",
         description: "Discover Gravelord Servant covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
         id: "link-the-fire",
         title: "To Link the Fire",
         description: "Reach \"To Link the Fire\" ending",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
         id: "strongest-weapon",
         title: "Strongest Weapon",
         description: "Acquire best weapon through standard reinforcement",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "achievement_category"
       },
       {
