--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -393,21 +393,21 @@
         title: "Covenant: Gravelord Servant",
         description: "Discover Gravelord Servant covenant",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "link-the-fire",
         title: "To Link the Fire",
         description: "Reach \"To Link the Fire\" ending",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Progress"
       },
       {
         id: "strongest-weapon",
         title: "Strongest Weapon",
         description: "Acquire best weapon through standard reinforcement",
         difficulty: "Medium",
-        category: "achievement_category"
+        category: "Collection"
       },
       {
         id: "achievement_identifier",
