Add 3 new template cards

--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -403,11 +403,32 @@
         category: "Progress"
       },
       {
+        id: "achievement_identifier",
+        title: "achievement_title",
+        description: "achievement_description",
+        difficulty: "achievement_difficulty",
+        category: "achievement_category"
+      },
+      {
         id: "strongest-weapon",
         title: "Strongest Weapon",
         description: "Acquire best weapon through standard reinforcement",
         difficulty: "Medium",
         category: "Collection"
+      },
+      {
+        id: "achievement_identifier",
+        title: "achievement_title",
+        description: "achievement_description",
+        difficulty: "achievement_difficulty",
+        category: "achievement_category"
+      },
+      {
+        id: "achievement_identifier",
+        title: "achievement_title",
+        description: "achievement_description",
+        difficulty: "achievement_difficulty",
+        category: "achievement_category"
       },
       {
         id: "achievement_identifier",
