--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -403,7 +403,7 @@
         category: "Progress"
       },
       {
-        id: "achievement_identifier",
+        id: "covenant-path-of-the-dragon",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
@@ -417,7 +417,7 @@
         category: "Collection"
       },
       {
-        id: "achievement_identifier",
+        id: "covenant-blade-of-the-darkmoon",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
