--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -407,7 +407,7 @@
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "strongest-weapon",
@@ -421,14 +421,14 @@
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "achievement_identifier",
         title: "achievement_title",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
-        category: "achievement_category"
+        category: "Covenant"
       },
       {
         id: "achievement_identifier",
