--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -404,7 +404,7 @@
       },
       {
         id: "covenant-path-of-the-dragon",
-        title: "achievement_title",
+        title: "Covenant: Path of the Dragon",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "Covenant"
@@ -418,14 +418,14 @@
       },
       {
         id: "covenant-blade-of-the-darkmoon",
-        title: "achievement_title",
+        title: "Covenant: Blade of the Darkmoon",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "Covenant"
       },
       {
-        id: "achievement_identifier",
-        title: "achievement_title",
+        id: "covenant-warrior-of-sunlight",
+        title: "Covenant: Warrior of Sunlight",
         description: "achievement_description",
         difficulty: "achievement_difficulty",
         category: "Covenant"
