--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -405,7 +405,7 @@
       {
         id: "covenant-path-of-the-dragon",
         title: "Covenant: Path of the Dragon",
-        description: "achievement_description",
+        description: "Discover Path of the Dragon covenant",
         difficulty: "achievement_difficulty",
         category: "Covenant"
       },
@@ -419,14 +419,14 @@
       {
         id: "covenant-blade-of-the-darkmoon",
         title: "Covenant: Blade of the Darkmoon",
-        description: "achievement_description",
+        description: "Discover Blade of the Darkmoon covenant",
         difficulty: "achievement_difficulty",
         category: "Covenant"
       },
       {
         id: "covenant-warrior-of-sunlight",
         title: "Covenant: Warrior of Sunlight",
-        description: "achievement_description",
+        description: "Discover Warrior of Sunlight covenant",
         difficulty: "achievement_difficulty",
         category: "Covenant"
       },
