--- a/ds1/achievements/index.html
+++ b/ds1/achievements/index.html
@@ -406,7 +406,7 @@
         id: "covenant-path-of-the-dragon",
         title: "Covenant: Path of the Dragon",
         description: "Discover Path of the Dragon covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Hard",
         category: "Covenant"
       },
       {
@@ -420,14 +420,14 @@
         id: "covenant-blade-of-the-darkmoon",
         title: "Covenant: Blade of the Darkmoon",
         description: "Discover Blade of the Darkmoon covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Medium",
         category: "Covenant"
       },
       {
         id: "covenant-warrior-of-sunlight",
         title: "Covenant: Warrior of Sunlight",
         description: "Discover Warrior of Sunlight covenant",
-        difficulty: "achievement_difficulty",
+        difficulty: "Hard",
         category: "Covenant"
       },
       {
