--- a/ds1/achievements/first-bell/index.html
+++ b/ds1/achievements/first-bell/index.html
@@ -183,7 +183,7 @@
     </style>
 </head>
 
-<body>
+<!-- <body>
     <header>
         <h1>Dark Souls: Remastered Achievements</h1>
     </header>
@@ -268,6 +268,7 @@
     <footer>
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
-</body>
+</body> -->
+
 
 </html>
