--- a/ds1/achievements/first-bell/index.html
+++ b/ds1/achievements/first-bell/index.html
@@ -270,5 +270,72 @@
     </footer>
 </body> -->
 
+<body>
+    <header>
+        <h1>Dark Souls: Remastered Achievements</h1>
+    </header>
+
+    <div class="breadcrumbs">
+        <a href="../../../index.html">Home</a> >
+        <a href="../../landing-page.html">Dark Souls: Remastered</a> >
+        <a href="../index.html">All Achievement Guides</a> >
+        Ring The Bell (Undead Church)
+    </div>
+
+    <div class="achievement-container">
+        <div class="achievement-header">
+            <div class="achievement-info">
+                <h2 class="achievement-title">Ring the Bell (Undead Church)</h2>
+                <p class="achievement-description">Defeat the Bell Gargoyles and ring the first Bell of Awakening at the
+                    Undead Church.</p>
+            </div>
+            <span class="difficulty-tag">Easy</span>
+        </div>
+
+        <div class="guide-section">
+            <h3>Overview</h3>
+            <p>Face the Bell Gargoyles atop the Undead Parish to ring the first Bell of Awakening and progress the main
+                storyline.</p>
+            <p>This is one of the earliest major bosses you'll encounter. It introduces multi-target combat and aerial
+                attacks. Defeating the Gargoyles grants access to the first bell, which is part of the main requirement
+                to access Sen’s Fortress.</p>
+        </div>
+
+        <div class="guide-section">
+            <h3>Additional Information</h3>
+            <p>Information on boss fight:</p>
+            <ol>
+                <li>Boss Location: Undead Parish, atop the church tower.</li>
+                <li>
+                    Bell Gargoyle Mechanics:
+                    <ul>
+                        <li>The fight starts with one gargoyle; the second joins once the first reaches ~50% health.
+                        </li>
+                        <li>
+                            Second Gargoyle Strategy:
+                            <ul>
+                                <li>The second gargoyle has a shared moveset but is weaker and can breathe fire.</li>
+                                <li>Try to eliminate the first quickly to avoid being overwhelmed.</li>
+                                <li>Stay locked on to one at a time and use the roof's terrain to separate them.</li>
+                                <li>Fire resistance (like the Red and White Shield or Fire-resist armor) is useful.</li>
+                            </ul>
+                            <strong>Note:</strong> Summoning Knight Solaire outside the fog gate can make the fight
+                            significantly easier.
+                        </li>
+                        <li>Keep camera control tight — falling off the rooftop is a real danger.</li>
+                        <li>The Gargoyle’s tail can be cut off to obtain the Gargoyle Tail Axe weapon.</li>
+                    </ul>
+                </li>
+            </ol>
+        </div>
+
+        <a href="../../index.html" class="back-button">Back to All Achievements</a>
+    </div>
+
+    <footer>
+        <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
+    </footer>
+</body>
+
 
 </html>
