--- a/ds1/achievements/first-bell/index.html
+++ b/ds1/achievements/first-bell/index.html
@@ -286,8 +286,7 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Ring the Bell (Undead Church)</h2>
-                <p class="achievement-description">Defeat the Bell Gargoyles and ring the first Bell of Awakening at the
-                    Undead Church.</p>
+                <p class="achievement-description">Ring Bell of Awakening at Undead Church.</p>
             </div>
             <span class="difficulty-tag">Easy</span>
         </div>
