Add information for second bell

--- a/ds1/achievements/second-bell/index.html
+++ b/ds1/achievements/second-bell/index.html
@@ -192,71 +192,54 @@
         <a href="../../../index.html">Home</a> >
         <a href="../../landing-page.html">Dark Souls: Remastered</a> >
         <a href="../index.html">All Achievement Guides</a> >
-        Ring The Bell (Qualaag's Domain)
+        Ring The Bell (Quelaag's Domain)
     </div>
 
     <div class="achievement-container">
         <div class="achievement-header">
             <div class="achievement-info">
-                <h2 class="achievement-title">Ring The Bell (Qualaag's Domain)</h2>
-                <p class="achievement-description">Ring The Bell (Qualaag's Domain)</p>
+                <h2 class="achievement-title">Ring the Bell (Quelaag's Domain)</h2>
+                <p class="achievement-description">Ring Bell of Awakening in Quelaag's domain.</p>
             </div>
             <span class="difficulty-tag">Medium</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>Survive the poisonous depths of Blighttown to challenge Quelaag and ring the second Bell of Awakening.
+            </p>
+            <p>This is the second main bell required to unlock Sen’s Fortress. The fight itself is manageable if you're
+                patient, but reaching Quelaag’s Domain can be more dangerous than the boss due to Blighttown’s toxic
+                hazards and tough enemies.</p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
+            <p>Information on boss fight:</p>
             <ol>
-                <li>.</li>
+                <li>Boss Location: Quelaag’s Domain, at the base of Blighttown.</li>
                 <li>
-                    nested list:
+                    Quelaag Fight Mechanics:
                     <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
+                        <li>Quelaag is a half-woman, half-spider boss who deals heavy fire damage and explosive AoEs.
                         </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
                         <li>
-                            nested list:
+                            Fight Strategy:
                             <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
+                                <li>Watch for lava spits — they persist on the ground and restrict movement.</li>
+                                <li>Stay behind or to the side of her spider body to avoid many of her attacks.</li>
+                                <li>Use a shield with high fire resistance (e.g., Black Knight Shield) if you're
+                                    blocking.</li>
+                                <li>Light armor or rolling builds should focus on dodging her melee swipes and lava
+                                    zones.</li>
                             </ul>
-                            <strong>Note:</strong> note
+                            <strong>Note:</strong> You can summon Maneater Mildred if you defeat her invasion near the
+                            swamp bonfire.
                         </li>
-                        <li>.</li>
-                        <li>.</li>
+                        <li>Fire resistance and poison-curing items (like Purple Moss) are highly recommended for the
+                            lead-up through Blighttown.</li>
+                        <li>After defeating Quelaag, the second Bell of Awakening is located just past the boss fog
+                            gate, guarded by a stationary character.</li>
                     </ul>
                 </li>
             </ol>
@@ -269,5 +252,6 @@
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
+
 
 </html>
