Add information for reach anor londo

--- a/ds1/achievements/reach-anor-londo/index.html
+++ b/ds1/achievements/reach-anor-londo/index.html
@@ -199,75 +199,52 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Reach Anor Londo</h2>
-                <p class="achievement-description">Reach Anor Londo</p>
+                <p class="achievement-description">Arrive in Anor Londo.</p>
             </div>
             <span class="difficulty-tag">Easy</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>Reach the grand city of the gods, Anor Londo, after ringing both Bells of Awakening.</p>
+            <p>Once both bells are rung, the gate to Sen’s Fortress opens. You must then complete the trap-filled
+                fortress and defeat the Iron Golem to be transported to Anor Londo by winged demons.</p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
+            <p>Information on reaching Anor Londo:</p>
             <ol>
-                <li>.</li>
+                <li>Defeat the Bell Gargoyles and Chaos Witch Quelaag to ring both bells.</li>
                 <li>
-                    nested list:
+                    Navigating Sen's Fortress:
                     <ul>
-                        <li>.</li>
+                        <li>Watch out for swinging blade traps and lightning-throwing snakemen.</li>
                         <li>
-                            nested list:
+                            Iron Golem boss tips:
                             <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
+                                <li>Weak to lightning and falling off the arena.</li>
+                                <li>Use Tarkus summon (black sign near fog gate) to make it a breeze.</li>
+                                <li>Stay behind his legs and watch for stomps.</li>
+                                <li>Roll through his grab — don’t get thrown.</li>
                             </ul>
-                            <strong>Note:</strong> note
+                            <strong>Note:</strong> Killing the golem triggers a cutscene that brings you to Anor Londo
+                            automatically.
                         </li>
-                        <li>.</li>
-                        <li>.</li>
+                        <li>There is no way to miss this achievement if you’re progressing naturally.</li>
+                        <li>Use the bonfire just ahead to save and rest after arrival.</li>
                     </ul>
                 </li>
             </ol>
         </div>
 
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <a href="../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
+
 
 </html>
