Add more additional information on bonfire location and firekeeper

--- a/ds1/achievements/reach-anor-londo/index.html
+++ b/ds1/achievements/reach-anor-londo/index.html
@@ -232,7 +232,11 @@
                             automatically.
                         </li>
                         <li>There is no way to miss this achievement if you’re progressing naturally.</li>
-                        <li>Use the bonfire just ahead to save and rest after arrival.</li>
+                        <li>Use the bonfire just ahead to save and rest after arrival. You will pass by a guard and
+                            enter a room with two more. You can ignore all of them by walking carefully. Upon exiting
+                            the building, enter the first corridor on the left and there will be a bonfire with a
+                            firekeeper. Talking to the firekeeper is optional, but she's a cool character, so I
+                            recommend. She also gives some useful advice!</li>
                     </ul>
                 </li>
             </ol>
