Add lordvessel guide information

--- a/ds1/achievements/lordvessel/index.html
+++ b/ds1/achievements/lordvessel/index.html
@@ -199,75 +199,55 @@
         <div class="achievement-header">
             <div class="achievement-info">
                 <h2 class="achievement-title">Lordvessel</h2>
-                <p class="achievement-description">Lordvessel</p>
+                <p class="achievement-description">Acquire the Lordvessel.</p>
             </div>
             <span class="difficulty-tag">Hard</span>
         </div>
 
         <div class="guide-section">
             <h3>Overview</h3>
-            <p>Quick tagline.</p>
-            <p>Deeper explanation.</p>
+            <p>The Lordvessel unlocks fast travel and allows access to the four Lord Soul areas.</p>
+            <p>To obtain it, you must defeat Ornstein and Smough in Anor Londo — widely considered one of the toughest
+                fights in the game. Afterward, you’ll be rewarded by Gwynevere with the Lordvessel.</p>
         </div>
 
         <div class="guide-section">
             <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
+            <p>Information on boss fight:</p>
             <ol>
-                <li>.</li>
+                <li>Boss Location: Anor Londo, inside the cathedral past the silver knight archers.</li>
                 <li>
-                    nested list:
+                    Ornstein & Smough Mechanics:
                     <ul>
-                        <li>.</li>
+                        <li>One is fast (Ornstein), the other is heavy (Smough). You must fight both at once.</li>
                         <li>
-                            nested list:
+                            Strategy Breakdown:
                             <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
+                                <li>Focus on dodging, not blocking — Ornstein pierces through shields.</li>
+                                <li>Pick one target and stick with it — whoever dies second becomes the "super" version.
+                                </li>
+                                <li>Super Smough = slower, more damage. Super Ornstein = more aggressive and
+                                    lightning-based.</li>
+                                <li>Use summons (e.g. Solaire) or human phantoms to split aggro.</li>
                             </ul>
-                            <strong>Note:</strong> note
+                            <strong>Note:</strong> After the fight, speak with Gwynevere to receive the Lordvessel
+                            automatically.
                         </li>
-                        <li>.</li>
-                        <li>.</li>
+                        <li>You can place the Lordvessel at Firelink Altar by siding with Frampt or Kaathe — this
+                            affects lore but not achievement progress.</li>
+                        <li>Using the Lordvessel enables fast travel between major bonfires.</li>
                     </ul>
                 </li>
             </ol>
         </div>
 
-        <div class="guide-section">
-            <h3>Additional Information</h3>
-            <p>Information on [input]:</p>
-            <ol>
-                <li>.</li>
-                <li>
-                    nested list:
-                    <ul>
-                        <li>.</li>
-                        <li>
-                            nested list:
-                            <ul>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                                <li>.</li>
-                            </ul>
-                            <strong>Note:</strong> note
-                        </li>
-                        <li>.</li>
-                        <li>.</li>
-                    </ul>
-                </li>
-            </ol>
-        </div>
-
-        <a href="../index.html" class="back-button">Back to All Achievements</a>
+        <a href="../../index.html" class="back-button">Back to All Achievements</a>
     </div>
 
     <footer>
         <p>Dark Souls: Remastered Achievement Guide - Praise the Sun!</p>
     </footer>
 </body>
+
 
 </html>
