Add more information

--- a/ds1/achievements/lordvessel/index.html
+++ b/ds1/achievements/lordvessel/index.html
@@ -225,6 +225,7 @@
                             <ul>
                                 <li>Focus on dodging, not blocking — Ornstein pierces through shields.</li>
                                 <li>Pick one target and stick with it — whoever dies second becomes the "super" version.
+                                    The other will become full health in phase two, no matter what.
                                 </li>
                                 <li>Super Smough = slower, more damage. Super Ornstein = more aggressive and
                                     lightning-based.</li>
@@ -234,7 +235,9 @@
                             automatically.
                         </li>
                         <li>You can place the Lordvessel at Firelink Altar by siding with Frampt or Kaathe — this
-                            affects lore but not achievement progress.</li>
+                            affects lore but not achievement progress. If you don't know who Kaathe is, be careful
+                            researching. You may encounter spoilers. I plan to add a useful guide to finding out without
+                            spoilers in the future. Stay tuned!</li>
                         <li>Using the Lordvessel enables fast travel between major bonfires.</li>
                     </ul>
                 </li>
